tekton/triggers/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name:  github-buildah-eventlistener-alb-ingress
  namespace: git-clone
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: <certificate-arn>
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: el-github-buildah-listener
            port:
              number: 8080
